<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background">

    <RelativeLayout
        android:id="@+id/profileImageLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <com.github.cris16228.library.view.RoundedImageView
            android:id="@+id/profileImage"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_margin="5dp"
            android:scaleType="centerCrop" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/profile_upload_picture"
            android:textColor="@color/colorText" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/profileImageLayout"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/user_name_text"
                android:textColor="@color/colorText"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/profileUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:gravity="center"
                android:text="@string/user_name"
                android:textColor="@color/colorText"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/user_mail_text"
                android:textColor="@color/colorText"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/profileEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:gravity="center"
                android:text="@string/user_email"
                android:textColor="@color/colorText"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/user_registration_date_text"
                android:textColor="@color/colorText"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/profileRegistrationDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:gravity="center"
                android:text="@string/user_registration_date"
                android:textColor="@color/colorText"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="5dp"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/update_password_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/button_background_20"
            android:text="@string/update_password"
            android:textColor="@color/colorText"
            android:textStyle="bold"
            android:visibility="gone"
            app:backgroundTint="@color/colorSecondaryMain" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/logout_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/button_background_20"
            android:text="@string/sign_out"
            android:textColor="@color/colorText"
            android:textStyle="bold"
            app:backgroundTint="@color/colorSecondaryMain" />
    </LinearLayout>
</RelativeLayout>