<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    android:orientation="vertical">


    <TextView
        android:id="@+id/pageTitleRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/title_fragment_register"
        android:textColor="@color/colorText"
        android:textSize="40sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/authFieldsRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/pageTitleRegister"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayoutUsername"
            style="@style/TextInputLayout.MainColors"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/username_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputLayoutUsernameText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorText" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayoutEmail"
            style="@style/TextInputLayout.MainColors"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/email_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputLayoutEmailText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textColor="@color/colorText" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayoutPassword"
            style="@style/TextInputLayout.MainColors"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/password_hint"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputLayoutPasswordText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@color/colorText" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayoutConfirmPassword"
            style="@style/TextInputLayout.MainColors"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/confirm_password_hint"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputLayoutConfirmPasswordText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@color/colorText" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/errorTextRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/authError"
            android:textAlignment="center"
            android:textColor="@color/colorTextError"
            android:textSize="14sp"
            android:visibility="invisible" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/authFieldsRegister"
        android:layout_marginStart="70dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="70dp"
        android:background="@drawable/button_background_20"
        android:text="@string/register"
        android:textColor="@color/colorText"
        android:textStyle="bold"
        app:backgroundTint="@color/colorSecondaryMain" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/buttonLogin"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/already_account"
        android:textColor="@color/colorText"
        android:textSize="18sp"
        android:textStyle="bold" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button_background_20"
        android:text="@string/login"
        android:textColor="@color/colorText"
        android:textStyle="bold"
        app:backgroundTint="@color/colorSecondaryMain" />

</RelativeLayout>