<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/setup_text_needed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/setup_text_needed"
            android:textAlignment="center"
            android:textColor="@color/colorText"
            android:textSize="@dimen/_13ssp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="@string/setup_currency"
            android:textAlignment="center"
            android:textColor="@color/colorText" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/appSetupCurrencyLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_5sdp"
            android:hint="@string/setup_currency_hint"
            android:textColorHint="@color/colorText"
            app:boxStrokeColor="@color/colorPrimaryMain"
            app:endIconMode="none"
            app:hintTextColor="@color/colorPrimaryMain">

            <AutoCompleteTextView
                android:id="@+id/appSetupCurrency"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/setup_currency_hint"
                android:inputType="none"
                android:labelFor="@id/appSetupCurrencyLayout"
                android:textSize="@dimen/_11ssp" />
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="@string/setup_date_format"
            android:textAlignment="center"
            android:textColor="@color/colorText" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/appSetupDateFormatLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_5sdp"
            android:hint="@string/setup_date_format_hint"
            android:textColorHint="@color/colorText"
            app:boxStrokeColor="@color/colorPrimaryMain"
            app:endIconMode="none"
            app:hintTextColor="@color/colorPrimaryMain">

            <AutoCompleteTextView
                android:id="@+id/appSetupDateFormat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/setup_date_format_hint"
                android:inputType="none"
                android:labelFor="@id/appSetupDateFormatLayout"
                android:textSize="@dimen/_11ssp" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/setupFinish"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_38sdp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_4sdp"
        android:layout_marginBottom="@dimen/_12sdp"
        android:background="@color/transparent"
        android:text="@string/finish"
        android:textColor="@color/colorPrimaryMain"
        android:textSize="@dimen/_11ssp"
        android:visibility="gone" />
</RelativeLayout>