<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/title_activity_reset_password"
        android:textColor="@color/colorText"
        android:textSize="40sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/inputLayoutResetPasswordText"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:textColor="@color/colorText"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonResetPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="70dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="70dp"
            android:background="@drawable/button_background_20"
            android:text="@string/reset_password"
            android:textColor="@color/colorText"
            android:textStyle="bold"
            app:backgroundTint="@color/colorSecondaryMain" />

    </LinearLayout>
</LinearLayout>